fix footer on windows and tagline on mobile

--- a/styles/base.less
+++ b/styles/base.less
@@ -242,6 +242,9 @@ body {
 .footer-wrapper {
   background: #2c3e50;
   color: #ffffff;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 
   .site-footer {
     font-size: .75em;
@@ -298,7 +301,10 @@ body.collection-type-blog.view-list {
 
     .header-image-wrapper {
       .site-title-heading {
-          font-size: 1.5em;
+        font-size: 1.5em;
+        span {
+          font-size: 0.5em;
+          }
       }
     }
 
